@@ -1,3 +1,9 @@
+Mon Jul 21 10:42:42 2003  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* debugapp.in: Detect core files with name core.xxx, not just
+	core, as found on some gnu-linux systems.  Improved user
+	prompting.
+
 Mon Jul 21 10:31:08 2003  Andrew Ruder <aeruder@ksu.edu>
 
 	* debugapp.in: Pass debugapp arguments to gdb to use when running
